@@ -70,6 +70,7 @@ import spoon.reflect.code.CtThrow;
 import spoon.reflect.code.CtTry;
 import spoon.reflect.code.CtTryWithResource;
 import spoon.reflect.code.CtTypeAccess;
+import spoon.reflect.code.CtTypePattern;
 import spoon.reflect.code.CtUnaryOperator;
 import spoon.reflect.code.CtWhile;
 import spoon.reflect.code.CtYieldStatement;
@@ -90,6 +91,8 @@ import spoon.reflect.declaration.CtFormalTypeDeclarer;
 import spoon.reflect.declaration.CtMethod;
 import spoon.reflect.declaration.CtPackage;
 import spoon.reflect.declaration.CtParameter;
+import spoon.reflect.declaration.CtRecord;
+import spoon.reflect.declaration.CtRecordComponent;
 import spoon.reflect.declaration.CtType;
 import spoon.reflect.declaration.CtTypeParameter;
 import spoon.reflect.declaration.CtTypedElement;
@@ -107,6 +110,8 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+
+import static spoon.reflect.code.BinaryOperatorKind.INSTANCEOF;
 
 @SuppressWarnings("unchecked")
 public class ParentExiter extends CtInheritanceScanner {
@@ -406,6 +411,14 @@ public class ParentExiter extends CtInheritanceScanner {
 
 	@Override
 	public <T> void visitCtBinaryOperator(CtBinaryOperator<T> operator) {
+		CtElement child = this.child;
+		// check if this is a type pattern, as it needs special treatment
+		// patterns are only allowed for instanceof and on the right hand
+		if (child instanceof CtLocalVariable && operator.getKind() == INSTANCEOF && operator.getLeftHandOperand() != null) {
+			CtTypePattern typePattern = child.getFactory().Core().createTypePattern();
+			typePattern.setVariable((CtLocalVariable<?>) child);
+			child = typePattern; // replace the local variable with a pattern (which is a CtExpression)
+		}
 		if (child instanceof CtExpression) {
 			if (operator.getLeftHandOperand() == null) {
 				operator.setLeftHandOperand((CtExpression<?>) child);
@@ -462,7 +475,7 @@ public class ParentExiter extends CtInheritanceScanner {
 		if (node instanceof CaseStatement) {
 			caseStatement.setCaseKind(((CaseStatement) node).isExpr ? CaseKind.ARROW : CaseKind.COLON);
 		}
-		if (node instanceof CaseStatement && ((CaseStatement) node).constantExpression != null && child instanceof CtExpression
+		if (node instanceof CaseStatement && ((CaseStatement) node).constantExpressions != null && child instanceof CtExpression
 				&& caseStatement.getCaseExpressions().size() < ((CaseStatement) node).constantExpressions.length) {
 			caseStatement.addCaseExpression((CtExpression<E>) child);
 			return;
@@ -483,7 +496,7 @@ public class ParentExiter extends CtInheritanceScanner {
 			// Catch annotations are processed before actual CtCatchVariable is created and because of that they attach to CtCatch.
 			// Since annotations cannot be attached to CtCatch itself, we can simply transfer them to CtCatchVariable.
 			catchBlock.getAnnotations().forEach(a -> { a.setParent(child); child.addAnnotation(a); });
-			catchBlock.setAnnotations(Collections.unmodifiableList(Collections.emptyList()));
+			catchBlock.setAnnotations(List.of());
 			return;
 		}
 		super.visitCtCatch(catchBlock);
@@ -990,5 +1003,37 @@ public class ParentExiter extends CtInheritanceScanner {
 			return;
 		}
 		super.visitCtYieldStatement(e);
+	}
+
+	@Override
+	public void visitCtTypePattern(CtTypePattern pattern) {
+		if (child instanceof CtLocalVariable) {
+			pattern.setVariable((CtLocalVariable<?>) child);
+		}
+		super.visitCtTypePattern(pattern);
+	}
+
+	@Override
+	public void visitCtRecord(CtRecord recordType) {
+		if (child instanceof CtConstructor) {
+			recordType.addConstructor((CtConstructor) child);
+		}
+		if (child instanceof CtAnonymousExecutable) {
+			recordType.addAnonymousExecutable((CtAnonymousExecutable) child);
+		}
+		if (child instanceof CtRecordComponent) {
+			((CtRecord) recordType).addRecordComponent((CtRecordComponent) child);
+		}
+		super.visitCtRecord(recordType);
+	}
+
+	@Override
+	public void visitCtRecordComponent(CtRecordComponent recordComponent) {
+		if (childJDT instanceof TypeReference && child instanceof CtTypeAccess) {
+			recordComponent.setType(((CtTypeAccess) child).getAccessedType());
+			substituteAnnotation((CtTypedElement) recordComponent);
+			return;
+		}
+		scanCtElement(recordComponent);
 	}
 }
